--- a/src/Controller/Signuppage.fxml
+++ b/src/Controller/Signuppage.fxml
@@ -9,13 +9,13 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.SignupController">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.SignupPageController">
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
          <children>
-            <Text layoutX="195.0" layoutY="146.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" wrappingWidth="62.26416015625" />
-            <Text layoutX="173.0" layoutY="303.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Credit card Details" wrappingWidth="133.26416015625" />
-            <Text layoutX="195.0" layoutY="218.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" wrappingWidth="62.26416015625" />
+            <Text layoutX="201.0" layoutY="146.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username :" wrappingWidth="77.26416015625" />
+            <Text layoutX="173.0" layoutY="303.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Credit card Details :" wrappingWidth="133.26416015625" />
+            <Text layoutX="191.0" layoutY="218.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password :" wrappingWidth="69.26416015625" />
             <TextField layoutX="306.0" layoutY="128.0" />
             <TextField layoutX="306.0" layoutY="285.0" />
             <TextField layoutX="306.0" layoutY="200.0" />
