--- a/src/Controller/LoginPage.fxml
+++ b/src/Controller/LoginPage.fxml
@@ -13,7 +13,7 @@
       <TextField layoutX="287.0" layoutY="117.0" />
       <TextField layoutX="287.0" layoutY="202.0" />
       <Button fx:id="BackButton" layoutX="61.0" layoutY="304.0" mnemonicParsing="false" onAction="#Goback" prefHeight="41.0" prefWidth="90.0" style="-fx-background-color: gray;" text="Back" textFill="#fffdfd" />
-      <Button fx:id="BackButton1" layoutX="467.0" layoutY="304.0" mnemonicParsing="false" onAction="#Goback" prefHeight="41.0" prefWidth="90.0" style="-fx-background-color: gray;" text="Let's Ride!" textFill="#fffdfd" />
+      <Button fx:id="RideButton" layoutX="467.0" layoutY="304.0" mnemonicParsing="false" onAction="#Ride" prefHeight="41.0" prefWidth="90.0" style="-fx-background-color: gray;" text="Let's Ride!" textFill="#fffdfd" />
    </children>
    <effect>
       <Blend />
