--- a/src/Controller/Acceuilpage.fxml
+++ b/src/Controller/Acceuilpage.fxml
@@ -21,23 +21,23 @@
 
 <AnchorPane fx:id="AnchorPane" maxHeight="-1.0" maxWidth="-1.0" prefHeight="424.0" prefWidth="653.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.AcceuilPageController">
    <children>
-      <Text layoutX="41.0" layoutY="179.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Fast Easy Friendly" textAlignment="CENTER" wrappingWidth="132.65234375">
+      <Text layoutX="41.0" layoutY="231.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Fast Easy Friendly" textAlignment="CENTER" wrappingWidth="132.65234375">
          <font>
             <Font size="19.0" />
          </font>
       </Text>
       <Button fx:id="LoginButton" layoutX="460.0" layoutY="135.0" mnemonicParsing="false" onAction="#loadsignin" prefHeight="51.0" prefWidth="154.0" text="Log In" />
-      <Text layoutX="1.0" layoutY="138.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Skoot" textAlignment="CENTER" wrappingWidth="212.54256439208984">
+      <Text layoutX="1.0" layoutY="176.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Scoot" textAlignment="CENTER" wrappingWidth="212.54256439208984">
          <font>
             <Font name="Andale Mono" size="43.0" />
          </font>
       </Text>
-      <ImageView fitHeight="200.0" fitWidth="207.0" layoutX="207.0" layoutY="123.0" opacity="0.56" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="200.0" fitWidth="207.0" layoutX="207.0" layoutY="123.0" pickOnBounds="true" preserveRatio="true">
          <effect>
             <ColorAdjust brightness="-0.27" contrast="0.21" hue="1.0" saturation="-1.0" />
          </effect>
          <image>
-            <Image url="@../sample/depositphotos_91382576-stock-illustration-boy-riding-a-scooter-sketch.jpg" />
+            <Image url="@../sample/giphy.gif" />
          </image>
       </ImageView>
       <Button fx:id="SignupButton" layoutX="460.0" layoutY="236.0" mnemonicParsing="false" onAction="#loadsignup" prefHeight="51.0" prefWidth="154.0" style="-fx-background-color: black;" text="Sign up" textFill="#fff9f9" />
