--- a/src/View/MenuPage.fxml
+++ b/src/View/MenuPage.fxml
@@ -34,7 +34,7 @@
          </image>
       </ImageView>
       <Button fx:id="MapsButton" layoutX="239.0" layoutY="29.0" mnemonicParsing="false" onAction="#MapsButtonPressed" opacity="0.0" prefHeight="104.0" prefWidth="122.0" style="-fx-background-color: White;" />
-      <Button fx:id="BackButton" layoutX="54.0" layoutY="289.0" mnemonicParsing="false" onAction="#BackButtonPressed" prefHeight="41.0" prefWidth="90.0" style="-fx-background-color: Grey;" text="Back" textFill="#fffefe" />
+      <Button fx:id="BackButton" layoutX="42.0" layoutY="324.0" mnemonicParsing="false" onAction="#BackButtonPressed" prefHeight="41.0" prefWidth="90.0" style="-fx-background-color: Grey;" text="Back" textFill="#fffefe" />
       <Text layoutX="452.0" layoutY="154.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Start charging!" textAlignment="CENTER" />
       <ImageView fitHeight="104.0" fitWidth="112.0" layoutX="446.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -42,5 +42,12 @@
          </image>
       </ImageView>
       <Button fx:id="StartChargingButton" layoutX="442.0" layoutY="29.0" mnemonicParsing="false" onAction="#pageCharging" opacity="0.0" prefHeight="104.0" prefWidth="112.0" />
+      <ImageView fitHeight="98.0" fitWidth="122.0" layoutX="251.0" layoutY="189.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Ressources/emoticon-sad-7-512.png" />
+         </image>
+      </ImageView>
+      <Button fx:id="PlainteButton" layoutX="251.0" layoutY="189.0" mnemonicParsing="false" opacity="0.0" prefHeight="98.0" prefWidth="98.0" />
+      <Text layoutX="255.0" layoutY="306.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Complaint" textAlignment="CENTER" wrappingWidth="90.0" />
    </children>
 </AnchorPane>
